// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders with default props 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .sc-AxjAm {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .sc-AxjAm,
.c1:focus:not(:disabled) ~ .sc-AxjAm {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
</div>
`;

exports[`Select variant "bottom-lined" renders passed options 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .sc-AxjAm {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .sc-AxjAm,
.c1:focus:not(:disabled) ~ .sc-AxjAm {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  >
    <option
      value="1"
    >
      test 1
    </option>
    <option
      selected=""
      value="2"
    >
      test 2
    </option>
  </select>
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
</div>
`;

exports[`Select variant "bottom-lined" renders the disabled styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #637689;
  background: #FFFFFF;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3.5rem;
  padding: 1.25rem 1.75rem 0.25rem 0.25rem;
  color: #C6CDD4;
  cursor: not-allowed;
  border-color: #C6CDD4;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1 ~ .c3 {
  top: 0.375rem;
  left: 0rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .svg-icon {
  top: 1rem;
}

.c1 ~ .c3 {
  color: #C6CDD4;
}

.c1 ~ .svg-icon svg > * {
  fill: #C6CDD4;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    disabled=""
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    disabled
  </label>
</div>
`;

exports[`Select variant "bottom-lined" renders the error styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #637689;
  background: #FFFFFF;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3.5rem;
  padding: 1.25rem 1.75rem 0.25rem 0.25rem;
  border-color: #FF5E05;
  box-shadow: inset 0 -0.0625rem 0 0 #FF5E05;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1 ~ .c3 {
  top: 0.375rem;
  left: 0rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .svg-icon {
  top: 1rem;
}

.c1 ~ .c3 {
  color: #FF5E05;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    error
  </label>
</div>
`;

exports[`Select variant "bottom-lined" renders the inverted disabled styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #C6CDD4;
  background: #001E3E;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: transparent;
  border-radius: 0;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3.5rem;
  padding: 1.25rem 1.75rem 0.25rem 0.25rem;
  color: #637689;
  cursor: not-allowed;
  border-color: #637689;
}

.c1 ~ .svg-icon svg > * {
  fill: #C6CDD4;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1 ~ .c3 {
  top: 0.375rem;
  left: 0rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .svg-icon {
  top: 1rem;
}

.c1 ~ .c3 {
  color: #637689;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #FFFFFF;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #FFFFFF;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    disabled=""
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    inverted disabled
  </label>
</div>
`;

exports[`Select variant "bottom-lined" renders the inverted styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #C6CDD4;
  background: #001E3E;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: transparent;
  border-radius: 0;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3.5rem;
  padding: 1.25rem 1.75rem 0.25rem 0.25rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #C6CDD4;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1 ~ .c3 {
  top: 0.375rem;
  left: 0rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .svg-icon {
  top: 1rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #FFFFFF;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #FFFFFF;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    inverted
  </label>
</div>
`;

exports[`Select variant "bottom-lined" renders with a label 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #637689;
  background: #FFFFFF;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3.5rem;
  padding: 1.25rem 1.75rem 0.25rem 0.25rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1 ~ .c3 {
  top: 0.375rem;
  left: 0rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .svg-icon {
  top: 1rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    label
  </label>
</div>
`;

exports[`Select variant "bottom-lined" renders with default props 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3.5rem;
  padding: 1.25rem 1.75rem 0.25rem 0.25rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1 ~ .sc-AxjAm {
  top: 0.375rem;
  left: 0rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .svg-icon {
  top: 1rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .sc-AxjAm,
.c1:focus:not(:disabled) ~ .sc-AxjAm {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
</div>
`;

exports[`Select variant "boxed" renders passed options 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .sc-AxjAm {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .sc-AxjAm,
.c1:focus:not(:disabled) ~ .sc-AxjAm {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  >
    <option
      value="1"
    >
      test 1
    </option>
    <option
      selected=""
      value="2"
    >
      test 2
    </option>
  </select>
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
</div>
`;

exports[`Select variant "boxed" renders the disabled styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #637689;
  background: #FFFFFF;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
  color: #C6CDD4;
  cursor: not-allowed;
  border-color: #C6CDD4;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .c3 {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .c3 {
  color: #C6CDD4;
}

.c1 ~ .svg-icon svg > * {
  fill: #C6CDD4;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    disabled=""
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    disabled
  </label>
</div>
`;

exports[`Select variant "boxed" renders the error styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #637689;
  background: #FFFFFF;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
  border-color: #FF5E05;
  box-shadow: inset 0 0 0 0.0625rem #FF5E05;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .c3 {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .c3 {
  color: #FF5E05;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    error
  </label>
</div>
`;

exports[`Select variant "boxed" renders the inverted disabled styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #C6CDD4;
  background: #001E3E;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: transparent;
  border-radius: 0;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
  color: #637689;
  cursor: not-allowed;
  border-color: #637689;
}

.c1 ~ .svg-icon svg > * {
  fill: #C6CDD4;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .c3 {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1 ~ .c3 {
  color: #637689;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #FFFFFF;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #FFFFFF;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    disabled=""
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    inverted disabled
  </label>
</div>
`;

exports[`Select variant "boxed" renders the inverted styles 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #C6CDD4;
  background: #001E3E;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: transparent;
  border-radius: 0;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #C6CDD4;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .c3 {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #FFFFFF;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #FFFFFF;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    inverted
  </label>
</div>
`;

exports[`Select variant "boxed" renders with a label 1`] = `
.c4 {
  position: absolute;
  pointer-events: none;
  line-height: 1;
  font-weight: 600;
  color: #637689;
  background: #FFFFFF;
  -webkit-transition: color 100ms ease-out,background 100ms ease-out;
  transition: color 100ms ease-out,background 100ms ease-out;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .c3 {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .c3,
.c1:focus:not(:disabled) ~ .c3 {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
  <label
    class="c3 c4"
    for="random"
  >
    label
  </label>
</div>
`;

exports[`Select variant "boxed" renders with default props 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  padding-right: 2rem;
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
  height: 3rem;
  padding: 0 2.25rem 0 0.75rem;
}

.c1 ~ .svg-icon svg > * {
  fill: #637689;
}

.c1:active:not(:disabled),
.c1:focus:not(:disabled) {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1 ~ .sc-AxjAm {
  top: -0.3125rem;
  left: 0.5625rem;
  padding: 0 0.25rem;
  font-size: 0.75rem;
}

.c1:-moz-focusring {
  outline: none;
  text-shadow: 0 0 0 #001E3E;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c1:active:not(:disabled) ~ .sc-AxjAm,
.c1:focus:not(:disabled) ~ .sc-AxjAm {
  color: #096BDB;
}

.c1:active:not(:disabled) ~ .svg-icon svg > *,
.c1:focus:not(:disabled) ~ .svg-icon svg > * {
  fill: #001E3E;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  right: 0.5rem;
  top: 0;
}

<div
  class="c0"
>
  <select
    class="c1"
    id="random"
  />
  <div
    class="c2 svg-icon"
  >
    <svg
      color="#001E3E"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 13.726l7-6.175v2.676l-7 6.222-7-6.222V7.55z"
        fill="currentColor"
        fill-rule="nonzero"
      />
    </svg>
  </div>
</div>
`;
